DLP2020/src/parser/GrammarParser.java
// Generated from src\parser\Grammar.g4 by ANTLR 4.7.2
package parser;

    import ast.*;
    

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		INT_CONSTANT=39, REAL_CONSTANT=40, CHAR_CONSTANT=41, IDENT=42, LINE_COMMENT=43, 
		MULTILINE_COMMENT=44, WHITESPACE=45;
	public static final int
		RULE_start = 0, RULE_definiciones = 1, RULE_definicion = 2, RULE_parametrosOpc = 3, 
		RULE_parametros = 4, RULE_parametro = 5, RULE_varLocales = 6, RULE_varLocal = 7, 
		RULE_campos = 8, RULE_campo = 9, RULE_tipo = 10, RULE_listaSentencias = 11, 
		RULE_sentencia = 12, RULE_expr = 13, RULE_argumentosOpc = 14, RULE_argumentos = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "definiciones", "definicion", "parametrosOpc", "parametros", 
			"parametro", "varLocales", "varLocal", "campos", "campo", "tipo", "listaSentencias", 
			"sentencia", "expr", "argumentosOpc", "argumentos"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'var'", "':'", "';'", "'struct'", "'{'", "'}'", "'('", "')'", 
			"','", "'int'", "'char'", "'float'", "'['", "']'", "'print'", "'printsp'", 
			"'println'", "'='", "'if'", "'else'", "'while'", "'return'", "'read'", 
			"'.'", "'cast'", "'<'", "'>'", "'-'", "'!'", "'*'", "'/'", "'+'", "'=='", 
			"'>='", "'<='", "'!='", "'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "INT_CONSTANT", "REAL_CONSTANT", "CHAR_CONSTANT", "IDENT", 
			"LINE_COMMENT", "MULTILINE_COMMENT", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public Programa ast;
		public DefinicionesContext definiciones;
		public DefinicionesContext definiciones() {
			return getRuleContext(DefinicionesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			((StartContext)_localctx).definiciones = definiciones();
			setState(33);
			match(EOF);
			((StartContext)_localctx).ast =  new Programa(((StartContext)_localctx).definiciones.list);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinicionesContext extends ParserRuleContext {
		public List<Definicion> list = new ArrayList<Definicion>();
		public DefinicionContext definicion;
		public List<DefinicionContext> definicion() {
			return getRuleContexts(DefinicionContext.class);
		}
		public DefinicionContext definicion(int i) {
			return getRuleContext(DefinicionContext.class,i);
		}
		public DefinicionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definiciones; }
	}

	public final DefinicionesContext definiciones() throws RecognitionException {
		DefinicionesContext _localctx = new DefinicionesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definiciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__3) | (1L << IDENT))) != 0)) {
				{
				{
				setState(36);
				((DefinicionesContext)_localctx).definicion = definicion();
				_localctx.list.add(((DefinicionesContext)_localctx).definicion.ast);
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinicionContext extends ParserRuleContext {
		public Definicion ast;
		public Token IDENT;
		public TipoContext tipo;
		public CamposContext campos;
		public ParametrosOpcContext parametrosOpc;
		public VarLocalesContext varLocales;
		public ListaSentenciasContext listaSentencias;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public CamposContext campos() {
			return getRuleContext(CamposContext.class,0);
		}
		public ParametrosOpcContext parametrosOpc() {
			return getRuleContext(ParametrosOpcContext.class,0);
		}
		public VarLocalesContext varLocales() {
			return getRuleContext(VarLocalesContext.class,0);
		}
		public ListaSentenciasContext listaSentencias() {
			return getRuleContext(ListaSentenciasContext.class,0);
		}
		public DefinicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicion; }
	}

	public final DefinicionContext definicion() throws RecognitionException {
		DefinicionContext _localctx = new DefinicionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_definicion);
		try {
			setState(81);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(44);
				match(T__0);
				setState(45);
				((DefinicionContext)_localctx).IDENT = match(IDENT);
				setState(46);
				match(T__1);
				setState(47);
				((DefinicionContext)_localctx).tipo = tipo();
				setState(48);
				match(T__2);
				((DefinicionContext)_localctx).ast =  new DefVariable(((DefinicionContext)_localctx).IDENT,((DefinicionContext)_localctx).tipo.ast);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(51);
				match(T__3);
				setState(52);
				((DefinicionContext)_localctx).IDENT = match(IDENT);
				setState(53);
				match(T__4);
				setState(54);
				((DefinicionContext)_localctx).campos = campos();
				setState(55);
				match(T__5);
				setState(56);
				match(T__2);
				((DefinicionContext)_localctx).ast =  new DefStruct(((DefinicionContext)_localctx).IDENT,((DefinicionContext)_localctx).campos.list,new TipoStruct(((DefinicionContext)_localctx).IDENT));
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(59);
				((DefinicionContext)_localctx).IDENT = match(IDENT);
				setState(60);
				match(T__6);
				setState(61);
				((DefinicionContext)_localctx).parametrosOpc = parametrosOpc();
				setState(62);
				match(T__7);
				setState(63);
				match(T__4);
				setState(64);
				((DefinicionContext)_localctx).varLocales = varLocales();
				setState(65);
				((DefinicionContext)_localctx).listaSentencias = listaSentencias();
				setState(66);
				match(T__5);
				((DefinicionContext)_localctx).ast =  new DefFuncion(((DefinicionContext)_localctx).IDENT,new TipoFuncion(new TipoVoid(),((DefinicionContext)_localctx).parametrosOpc.list),((DefinicionContext)_localctx).varLocales.list,((DefinicionContext)_localctx).listaSentencias.list);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(69);
				((DefinicionContext)_localctx).IDENT = match(IDENT);
				setState(70);
				match(T__6);
				setState(71);
				((DefinicionContext)_localctx).parametrosOpc = parametrosOpc();
				setState(72);
				match(T__7);
				setState(73);
				match(T__1);
				setState(74);
				((DefinicionContext)_localctx).tipo = tipo();
				setState(75);
				match(T__4);
				setState(76);
				((DefinicionContext)_localctx).varLocales = varLocales();
				setState(77);
				((DefinicionContext)_localctx).listaSentencias = listaSentencias();
				setState(78);
				match(T__5);
				((DefinicionContext)_localctx).ast =  new DefFuncion(((DefinicionContext)_localctx).IDENT,new TipoFuncion(((DefinicionContext)_localctx).tipo.ast,((DefinicionContext)_localctx).parametrosOpc.list),((DefinicionContext)_localctx).varLocales.list,((DefinicionContext)_localctx).listaSentencias.list);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametrosOpcContext extends ParserRuleContext {
		public List<DefVariable> list = new ArrayList<DefVariable>();
		public ParametrosContext parametros;
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public ParametrosOpcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametrosOpc; }
	}

	public final ParametrosOpcContext parametrosOpc() throws RecognitionException {
		ParametrosOpcContext _localctx = new ParametrosOpcContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_parametrosOpc);
		try {
			setState(87);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				((ParametrosOpcContext)_localctx).parametros = parametros();
				((ParametrosOpcContext)_localctx).list =  ((ParametrosOpcContext)_localctx).parametros.list;
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametrosContext extends ParserRuleContext {
		public List<DefVariable> list = new ArrayList<DefVariable>();
		public ParametroContext p1;
		public ParametroContext p2;
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public ParametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametros; }
	}

	public final ParametrosContext parametros() throws RecognitionException {
		ParametrosContext _localctx = new ParametrosContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_parametros);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			((ParametrosContext)_localctx).p1 = parametro();
			_localctx.list.add(((ParametrosContext)_localctx).p1.ast);
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8) {
				{
				{
				setState(91);
				match(T__8);
				setState(92);
				((ParametrosContext)_localctx).p2 = parametro();
				_localctx.list.add(((ParametrosContext)_localctx).p2.ast);
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametroContext extends ParserRuleContext {
		public DefVariable ast;
		public Token IDENT;
		public TipoContext tipo;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public ParametroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametro; }
	}

	public final ParametroContext parametro() throws RecognitionException {
		ParametroContext _localctx = new ParametroContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_parametro);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			((ParametroContext)_localctx).IDENT = match(IDENT);
			setState(101);
			match(T__1);
			setState(102);
			((ParametroContext)_localctx).tipo = tipo();
			((ParametroContext)_localctx).ast =  new DefVariable(((ParametroContext)_localctx).IDENT,((ParametroContext)_localctx).tipo.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarLocalesContext extends ParserRuleContext {
		public List<DefVariable> list = new ArrayList<DefVariable>();
		public VarLocalContext varLocal;
		public List<VarLocalContext> varLocal() {
			return getRuleContexts(VarLocalContext.class);
		}
		public VarLocalContext varLocal(int i) {
			return getRuleContext(VarLocalContext.class,i);
		}
		public VarLocalesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varLocales; }
	}

	public final VarLocalesContext varLocales() throws RecognitionException {
		VarLocalesContext _localctx = new VarLocalesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_varLocales);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(105);
				((VarLocalesContext)_localctx).varLocal = varLocal();
				_localctx.list.add(((VarLocalesContext)_localctx).varLocal.ast);
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarLocalContext extends ParserRuleContext {
		public DefVariable ast;
		public Token IDENT;
		public TipoContext tipo;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public VarLocalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varLocal; }
	}

	public final VarLocalContext varLocal() throws RecognitionException {
		VarLocalContext _localctx = new VarLocalContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_varLocal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(T__0);
			setState(114);
			((VarLocalContext)_localctx).IDENT = match(IDENT);
			setState(115);
			match(T__1);
			setState(116);
			((VarLocalContext)_localctx).tipo = tipo();
			setState(117);
			match(T__2);
			((VarLocalContext)_localctx).ast =  new DefVariable(((VarLocalContext)_localctx).IDENT,((VarLocalContext)_localctx).tipo.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CamposContext extends ParserRuleContext {
		public List<Definicion> list = new ArrayList<Definicion>();
		public CampoContext campo;
		public List<CampoContext> campo() {
			return getRuleContexts(CampoContext.class);
		}
		public CampoContext campo(int i) {
			return getRuleContext(CampoContext.class,i);
		}
		public CamposContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_campos; }
	}

	public final CamposContext campos() throws RecognitionException {
		CamposContext _localctx = new CamposContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_campos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENT) {
				{
				{
				setState(120);
				((CamposContext)_localctx).campo = campo();
				_localctx.list.add(((CamposContext)_localctx).campo.ast);
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CampoContext extends ParserRuleContext {
		public DefCampoStruct ast;
		public Token IDENT;
		public TipoContext tipo;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public CampoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_campo; }
	}

	public final CampoContext campo() throws RecognitionException {
		CampoContext _localctx = new CampoContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_campo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			((CampoContext)_localctx).IDENT = match(IDENT);
			setState(129);
			match(T__1);
			setState(130);
			((CampoContext)_localctx).tipo = tipo();
			setState(131);
			match(T__2);
			((CampoContext)_localctx).ast =  new DefCampoStruct(((CampoContext)_localctx).IDENT,((CampoContext)_localctx).tipo.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipoContext extends ParserRuleContext {
		public Tipo ast;
		public Token INT_CONSTANT;
		public TipoContext tipo;
		public Token IDENT;
		public TerminalNode INT_CONSTANT() { return getToken(GrammarParser.INT_CONSTANT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_tipo);
		try {
			setState(148);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
				enterOuterAlt(_localctx, 1);
				{
				setState(134);
				match(T__9);
				((TipoContext)_localctx).ast =  new TipoInt();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 2);
				{
				setState(136);
				match(T__10);
				((TipoContext)_localctx).ast =  new TipoChar();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 3);
				{
				setState(138);
				match(T__11);
				((TipoContext)_localctx).ast =  new TipoDouble();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 4);
				{
				setState(140);
				match(T__12);
				setState(141);
				((TipoContext)_localctx).INT_CONSTANT = match(INT_CONSTANT);
				setState(142);
				match(T__13);
				setState(143);
				((TipoContext)_localctx).tipo = tipo();
				((TipoContext)_localctx).ast =  new TipoArray(((TipoContext)_localctx).INT_CONSTANT,((TipoContext)_localctx).tipo.ast);
				}
				break;
			case IDENT:
				enterOuterAlt(_localctx, 5);
				{
				setState(146);
				((TipoContext)_localctx).IDENT = match(IDENT);
				((TipoContext)_localctx).ast =  new TipoStruct(((TipoContext)_localctx).IDENT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaSentenciasContext extends ParserRuleContext {
		public List<Sentencia> list = new ArrayList<Sentencia>();
		public SentenciaContext sentencia;
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public ListaSentenciasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaSentencias; }
	}

	public final ListaSentenciasContext listaSentencias() throws RecognitionException {
		ListaSentenciasContext _localctx = new ListaSentenciasContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_listaSentencias);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__18) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__24) | (1L << T__27) | (1L << T__28) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << CHAR_CONSTANT) | (1L << IDENT))) != 0)) {
				{
				{
				setState(150);
				((ListaSentenciasContext)_localctx).sentencia = sentencia();
				_localctx.list.add(((ListaSentenciasContext)_localctx).sentencia.ast);
				}
				}
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenciaContext extends ParserRuleContext {
		public Sentencia ast;
		public ExprContext expr;
		public ListaSentenciasContext listaSentencias;
		public Token IDENT;
		public ArgumentosOpcContext argumentosOpc;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<ListaSentenciasContext> listaSentencias() {
			return getRuleContexts(ListaSentenciasContext.class);
		}
		public ListaSentenciasContext listaSentencias(int i) {
			return getRuleContext(ListaSentenciasContext.class,i);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public ArgumentosOpcContext argumentosOpc() {
			return getRuleContext(ArgumentosOpcContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
	}
